[重构] 改为向槽位注册